--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="ISO-8859-1">
     <title>Welcome to CodeJava Home</title>
@@ -8,6 +8,7 @@
 <div class="container text-center">
     <h1>Welcome to CodeJava.net</h1>
 </div>
+<div sec:authentication="name"></div>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Logout" />
 </form>
