--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 
     <div class="form-input-container">
         <label>Mot de passe :</label>
-        <input name="pwd" class="form-control form-full-w" type="password" placeholder="123456">
+        <input name="password" class="form-control form-full-w" type="password" placeholder="123456">
     </div>
 
     <input type="submit" class="btn" value="Se connecter">
