--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,300 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Welcome to CodeJava Home</title>
+    <meta charset="UTF-8">
+    <div th:replace="~{fragments/header :: head}"></div>
+    <title>Notre carte</title>
 </head>
 <body>
-<div class="container text-center">
-    <h1>Welcome to CodeJava.net</h1>
-</div>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Logout" />
-</form>
+<div th:replace="~{fragments/card :: card}"></div>
+<div th:replace="~{fragments/header :: header}"></div>
+    
+    <h1 class="main-title">Découvre nos produits</h1>
+    <div class="relative">
+        <ul class="main-carrousel">
+            <li class="active">Nos formules</li>
+            <li>Bases</li>
+            <li>Protéines</li>
+            <li>Marinades</li>
+            <li>Garnitures</li>
+            <li>Graines</li>
+            <li>Sauces</li>
+            <li>Entrées</li>
+            <li>Dessert</li>
+        </ul>
+    </div>
 
+    <div class="relative center">
+        <span class="defaut-title">Nos formules</span>
+        <div class="v-carrousel">
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/poké-signature-thon-détouré-ombre.png}" alt="">
+                    <p>Poké thon</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/poke-me-signature-poulet-ombre.png}" alt="">
+                    <p>Poké poulet</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/Poké-signature-saumon-ombre.png}" alt="">
+                    <p>Poké saumon</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/poké-signature-dorade-ombre.png}" alt="">
+                    <p>Poké dorade</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+        </div>
+    
+        <span class="defaut-title">Nos bases</span>
+        <div class="v-carrousel">
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/BASE-RIZ-BLANC.png}" alt="">
+                    <p>Riz blanc</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/BASE-RIZ-BRUN.png}" alt="">
+                    <p>Riz brun</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/BASE-POUSSES-DEPINARD-.png}" alt="">
+                    <p>Pousses d'épinard</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/BASE-QUINOA.png}" alt="">
+                    <p>Quinoa</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+        </div>
+
+        <span class="defaut-title">Nos protéines</span>
+        <div class="v-carrousel">
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-POULET.png}" alt="">
+                    <p>Poulet</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-SAUMON.png}" alt="">
+                    <p>Saumon</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-THON-CRU.png}" alt="">
+                    <p>Thon cru</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-THON-CUIT.png}" alt="">
+                    <p>Thon cuit</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-FALAFELS.png}" alt="">
+                    <p>Falafels</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-DAURADE.png}"  alt="">
+                    <p>Daurade</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/PROTEINE-CREVETTE.png}" alt="">
+                    <p>Crevette</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+        </div>
+
+        <span class="defaut-title">Nos garnitures</span>
+        <div class="v-carrousel">
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-ANANAS.png}" alt="">
+                    <p>Ananas</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-AVOCAT.png}" alt="">
+                    <p>Avocat</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-CAROTTES.png}" alt="">
+                    <p>Carottes</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-CHOU-FLEURS.png}" alt="">
+                    <p>Chou-fleurs</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-CHOU-ROUGE.png}" alt="">
+                    <p>Chou rouge</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-CONCOMBRE.png}" alt="">
+                    <p>Concombre</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-EDAMAME.png}" alt="">
+                    <p>Edamame</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-FETA.png}" alt="">
+                    <p>Feta</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-FROMAGE-BLANC.png}" alt="">
+                    <p>Fromage blanc</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-GINGEMBRE.png}" alt="">
+                    <p>Gingembre</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-GRENADE.png}" alt="">
+                    <p>Grenade</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-MAIS.png}" alt="">
+                    <p>Mais</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-MANGUE.png}" alt="">
+                    <p>Mangue</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-OEUFS-DE-POISSON.png}" alt="">
+                    <p>Oeuf de poisson</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-OIGNONS-PICKELS-.png}" alt="">
+                    <p>Oignon pickels</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-POIS-CHICHE.png}" alt="">
+                    <p>Pois chiche</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-POIVRON.png}" alt="">
+                    <p>Poivron</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-POUSSE-DE-SOJA.png}" alt="">
+                    <p>Pousse de soja</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-RADIS.png}" alt="">
+                    <p>Radis</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-SALADE-DALGUES.png}" alt="">
+                    <p>Salade d'algues</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+            <div class="card">
+                <a class="link-product" href="">
+                    <img th:src="@{assets/GARNITURES-TOMATE-CERISE.png}" alt="">
+                    <p>Tomate cerise</p>
+                </a>
+                <a class="link-add-card" href="">Ajouter au panier</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
