--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Login Form</title>
+    <meta charset="UTF-8">
+    <div th:replace="~{fragments/header :: head}"></div>
+    <title>Créer mon compte</title>
 </head>
 <body>
-<div class="container">
-    <div class="wrapper">
-        <div class="title"><span>register Form</span></div>
-        <form th:action="@{/register}" th:object="${registerForm}" method="post">
-            <div class="row">
+    <div th:replace="~{fragments/card :: card}"></div>
+    <div th:replace="~{fragments/header :: header}"></div>
 
-                <input type="text" name="username">
-            </div>
-            <div class="row">
+    <h1 class="main-title">Se créer un compte sur MyResto.fr</h1>
+    <p class="sub-t">Vous devez vous créer un compte avant de pouvoir commander sur MyResto.fr</p>
 
-                <input type="password" name="password">
-            </div>
-            <div class="row button">
-                <input type="submit" value="Login">
-            </div>
-        </form>
-    </div>
-</div>
+    <form class="form" th:action="@{/register}" th:object="${registerForm}" method="post">
+        <div class="form-input-container">
+            <label>Identifiant :</label>
+            <input class="form-control form-full-w" type="text" placeholder="Jean" name="username">
+        </div>
+        <div class="form-input-container">
+            <label>Mot de passe :</label>
+            <input class="form-control form-full-w" type="text" placeholder="Dupont" name="password">
+        </div>
+
+        <input type="submit" class="btn" value="Créer mon compte">
+    </form>
 </body>
 </html>
