--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -54,6 +54,7 @@ header span.cardCount{position: absolute; right: 15px; top: 15px; background-col
 .v-carrousel .card .link-product{display: block; min-height: 100%; min-width: 100%; text-decoration: none; color: inherit; }
 .v-carrousel .card .link-product img{position: absolute; top: -175px; left: 50%; transform: translateX(-50%); width: 300px; transition: top 0.5s;}
 .v-carrousel .card .link-product img:hover{top: -155px;}
+.v-carrousel .card .link-product span{font-size: x-large;font-weight: 800;background-color: #75af4d;color: #fff;padding: 5px 10px;border-radius: 20px 5px 20px 5px;}
 .v-carrousel .card .link-product p{color: inherit;text-align: center;font-weight: 700;font-size: x-large;padding: 0 15px;margin: 0;}
 .v-carrousel .card .link-add-card{color: inherit; font-size: large;font-weight: 600;position: relative;display: block;padding: 25px 0;margin-top: 20px;text-decoration: underline;background-color: #0000000f;border-bottom-right-radius: 25px;border-bottom-left-radius: 25px;}
 .v-carrousel .card .link-add-card:hover{text-decoration: underline; text-decoration-thickness: 2px;}
@@ -169,7 +170,7 @@ header span.cardCount{position: absolute; right: 15px; top: 15px; background-col
 
 /* stock */
 .page_stock{margin-bottom:calc(48px + 25px + 25px)/*button+bottom+espace*/}
-/* todo
-HTML
-7. Faire les deux changement décrit dnas le css
-*/
+
+::-webkit-scrollbar-track{background-color: #f1f1f1;border-radius: 5px;}
+::-webkit-scrollbar{width: 5px;height: 5px;background-color: #fff;}
+::-webkit-scrollbar-thumb{background-color: #75af4d;}
