--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
 
     <form class="form" th:action="@{/register}" th:object="${registerForm}" method="post">
         <div class="form-input-container">
-            <label>Identifiant :</label>
+            <label>Adressse email :</label>
             <input class="form-control form-full-w" type="text" placeholder="Jean" name="username">
         </div>
         <div class="form-input-container">
