--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+  <script type="text/javascript" th:src="@{js/script.js}" defer></script>
 </head>
 <header th:fragment="header">
   <!--<img src="img/menu.svg" alt="" onclick="document.querySelector('header').classList.toggle('active');">
@@ -34,6 +35,7 @@
 
     <img th:src="@{img/menu.svg}" alt="" onclick="document.querySelector('header').classList.toggle('active');">
     <img th:src="@{img/card.svg}" alt="" id="card" onclick="document.querySelector('#modal_card').classList.toggle('active');">
+    <span class="cardCount">0</span>
     <ul class="nav">
       <li class="active"><a th:href="@{/}">La carte</a></li>
       <!--<li><a href="profile.html">Mon compte</a></li>-->
