--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <div th:replace="~{fragments/header :: head}"></div>
@@ -11,39 +11,27 @@
     
     <h1 class="main-title">Commandes a préparer</h1>
     <div class="relative px">
-        <div class="orders">
-            <p class="orders-time">Il y a 5 min <span>En cours</span></p>
-            <p class="orders-id">N°1324 - Morvan Steven</p>
-            <hr>
-            <table>
-                <tr>
-                    <td>Famous burger</td>
-                    <td>x1</td>
-                </tr>
-            </table>
-            <hr>
-            <p class="orders-price">103€ ttc</p>
+        <p th:if="${orderslist.empty}">Il n'y aucune commande pour le moment..</p>
+        <th:block th:each="order : ${orderslist}">
+            <div class="orders">
+                <p class="orders-time">[[${order.datecreated}]] <span th:text="${order.status}">status</span></p>
+                <p class="orders-id" th:text="${'N° ' + order.id + ' - ' + order.user.username}">name</p>
+                <hr>
+                <table>
+                    <th:block th:each="orderitem : ${order.items}">
+                        <tr>
+                            <td th:text="${orderitem.item.name}">name</td>
+                            <td th:text="${'x ' + orderitem.quantity}">quantity</td>
+                        </tr>
+                    </th:block>
+                </table>
+                <hr>
+                <p class="orders-price">103€ ttc</p>
 
-            <a href="" class="btn btn-unset">Annuler</a>
-            <a href="" class="btn">Terminer</a>
-        </div>
-
-        <div class="orders">
-            <p class="orders-time">Il y a 5 min <span>En cours</span></p>
-            <p class="orders-id">N°1324 - Morvan Steven</p>
-            <hr>
-            <table>
-                <tr>
-                    <td>Famous burger</td>
-                    <td>x1</td>
-                </tr>
-            </table>
-            <hr>
-            <p class="orders-price">103€ ttc</p>
-
-            <a href="" class="btn btn-unset">Annuler</a>
-            <a href="" class="btn">Terminer</a>
-        </div>
+                <a th:href="@{'/deleteorders/' + ${order.user.id}}" class="btn btn-unset">Annuler</a>
+                <a href="" class="btn" sec:authorize="hasRole('OWNER')">Terminer</a>
+            </div>
+        </th:block>
     </div>
 </body>
 </html>
