Fix bug connexion

--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -6,7 +6,7 @@
     <!--<c:forEach items="${cards}" var="card" varStatus="loop">-->
       <div class="product no-float">
         <div class="product-body">
-          <img src="${ card.image }" alt="">
+          <img src="" alt="">
           <span><!--${ card.name } --><b> x1</b></span>
         </div>
         <!--<img src="img/delete.svg" alt="" class="delete-product" data="${loop.index}" onclick="card_delete(this)">-->
