--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -29,7 +29,7 @@
                 <p class="orders-price">103€ ttc</p>
 
                 <a th:href="@{'/deleteorders/' + ${order.user.id}}" class="btn btn-unset">Annuler</a>
-                <a href="" class="btn" sec:authorize="hasRole('OWNER')">Terminer</a>
+                <a href="" class="btn" th:if="${role == 'owner'}">Terminer</a>
             </div>
         </th:block>
     </div>
