--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,7 +21,7 @@
             <label>Mot de passe :</label>
             <input class="form-control form-full-w" type="text" placeholder="Dupont" name="password">
         </div>
-
+        <span th:if="${err}">[[${err}]]</span>
         <input type="submit" class="btn" value="Créer mon compte">
     </form>
 </body>
