--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -26,7 +26,7 @@
                     </th:block>
                 </table>
                 <hr>
-                <p class="orders-price">103€ ttc</p>
+                <p class="orders-price" th:text="${order.price} + '€ TTC'">price</p>
 
                 <form th:action="@{'/updateorders'}" method="post">
                         <input name="changestatusbutton" type="submit" value="Annuler" class="btn btn-unset" th:if="${order.status != 'ANNULEE' and order.status != 'TERMINEE'}"/>
